force-app/main/default/objects/Portal_Directory_Search_Query_Field__mdt/Portal_Directory_Search_Query_Field__mdt.object-meta.xml
<CustomObject>
    <label>Portal Directory Search Query Field</label>
    <pluralLabel>Portal Directory Search Query Fields</pluralLabel>
</CustomObject>