force-app/main/default/objects/Portal_Directory_Search_Query_Field__mdt/fields/Is_Negate_Logic__c.field-meta.xml
<CustomField>
    <fullName>Is_Negate_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Negate Logic</label>
    <type>Checkbox</type>
</CustomField>