force-app/main/default/objects/Portal_Directory_Search_Query_Field__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
                <default>true</default>
                <label>IN</label>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
            </value>
            <value>
                <fullName>EXCLUDES</fullName>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
            <value>
                <fullName>DISTANCE</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>