force-app/main/default/objects/Portal_Directory_Search_Query_Field__mdt/fields/Portal_Directory_Search_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Portal_Directory_Search_Criteria__c</fullName>
    <label>Portal Directory Search Criteria</label>
    <referenceTo>Portal_Directory_Search_Criteria__mdt</referenceTo>
    <relationshipLabel>Portal Directory Search Query Fields</relationshipLabel>
    <relationshipName>Portal_Directory_Search_Query_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>